<resources>
    <string name="app_name">Doggie Steps</string>
    <string name="my_doggies_toolbar_title">My Doggies</string>
    <string name="favorites_toolbar_title">Favorites</string>
    <string name="home_tab_title">Home</string>
    <string name="delete_all_menu_title">Delete All Pets</string>
    <string name="list_view_menu_title">List View</string>
    <string name="grid_view_menu_title">Grid View</string>
    <string name="delete_pet_menu_title">Delete</string>
    <string name="total_pets_title">Total Pets:</string>
    <string name="action_delete">Delete Pet</string>
    <string name="enter_new_dog">Enter New Pet</string>
    <string name="pet_name_hint">Pet Name</string>
    <string name="pet_breed_hint">Breed</string>
    <string name="pet_age_hint">Age</string>
    <string name="pet_bio_hint">Bio</string>
    <string name="save_button_text">Save</string>
    <string name="edit_pet_title">Edit Pet</string>
    <string name="take_a_walk_button_text">Walk</string>
    <string name="add_an_image_button_text">Add an Image</string>
    <string name="stop_button_text">Stop</string>
    <string name="steps_count_format">Steps: %1$s</string>
    <string name="steps_label_text">Steps: </string>
    <string name="main_notification_channel_name">main_notification</string>
    <string name="details_image_content_description">Image of the pet %1$s</string>
    <string name="pet_added_snackbar_message">" has been added to the list."</string>
    <string name="pet_updated_snackbar_message">" has been updated</string>
    <string name="all_time_total_label_text">All-Time Total: </string>
    <string name="all_time_total_format">All-Time Total: %1$s</string>
    <string name="added_to_widgets_message">" has been added to widgets"</string>
    <string name="widgets_empty_text_view">Widgets are empty</string>
    <string name="pet_removal_message">\" has been removed from Favorites\"</string>
    <string name="sensor_client_success">SensorClient Retrieved</string>
    <string name="sensor_client_error">SensorClient not created successfully</string>
    <string name="unregistered_listener_message">Listener was unregistered successfully</string>
    <string name="empty_name_message">Must have Name entered</string>
    <string name="empty_breed_message">Unknown Breed</string>
    <string name="empty_age_message">Age Unknown</string>
    <string name="empty_bio_message">No bio listed.</string>
    <string name="active_notification_channel_name">active_notification</string>
    <string name="active_notification_big_text">Out on a walk with %1$s!</string>
    <string name="already_walking_toast_message">Sorry, Already walking with %1$s!</string>
    <string name="finished_toast_message">What a great walk with %1$s!</string>
    <string name="favorites_total_steps_toast_message">Total Steps: %1$s</string>
    <string name="add_to_favorites_message">%1$s added to Favorites</string>
    <string name="removed_from_favorites_message">%1$s removed from Favorites</string>
    <string name="update_button_text">Update</string>
    <string name="update_title_text">Update Pet</string>
    <string name="edit_error_message">Please stop activity before editing Pet</string>
    <string name="content_description_favorites_icon">Favorites Icon</string>
    <string name="content_description_empty_view">empty_view</string>
    <string name="empty_view_text">Looks empty in here…Add a Pet!</string>
    <string name="content_description_empty_list_image">Empty List Image</string>
    <string name="content_description_favorite_photo">Photo of %1s</string>
    <string name="content_description_more_options">More Options</string>
    <string name="content_description_save_button">Save Button</string>
    <string name="content_description_close_window">Close Window</string>
    <string name="content_description_add_new_pet_button">Add new pet button</string>
    <string name="content_description_edit_pet">Edit pet button</string>
    <string name="content_description_add_to_widgets">Add to widgets</string>
    <string name="content_description_favorite_button">Add to favorites button</string>
    <string name="content_description_walk_button">Walk Button</string>
    <string name="content_description_stop_button">Stop button</string>
    <string name="content_description_widget_pet_photo">Widget pet photo</string>
    <string name="camera_permission_denied_message">Unable to perform image capture without permission</string>
</resources>